# gnote

./: .clang-format  .clangd  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakeSettings.json  make.sh  shell.nix
Engine/: CMakeLists.txt  Engine.cpp  Engine.h  EntryPoint.h  Gnote.h  pch.h
Engine/Core/: Application.cpp  Application.h  Input.h  InputPlatform.h  OrthograhicCameraController.cpp  OrthograhicCameraController.h  TimeSteps.h  Window.h
Engine/Core/DefaultShader/: Fragment.glsl  Vertex.glsl
Engine/Core/DllLoader/: DllManager.cpp  DllManager.h  LoadLibrary.cpp  LoadLibrary.h
Engine/Core/Event/: ApplicationEvent.h  Event.h  KeyboardEvent.h  MouseEvent.h
Engine/Core/Imgui/: ImGuiLayer.cpp  ImGuiLayer.h
Engine/Core/Layer/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Engine/Core/Logger/: Logger.cpp  Logger.h
Engine/Core/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Engine/Core/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Engine/Core/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Engine/Core/Renderer/Camera/: Camera.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
Modules/ImGuiModule/: CMakeLists.txt  ImGuiModule.cpp  ex_pch.h
Sandbox/: CMakeLists.txt  GameLayer.h  Layer2D.h  Sandbox.cpp  main.cpp
Sandbox/Assets/Shader/: FragmentShader.glsl  VertexShader.glsl
Vendors/glad/: CMakeLists.txt
Vendors/glad/include/glad/: glad.h
Vendors/glad/src/: glad.c
Vendors/imgui/: CMakeLists.txt
Vendors/include/spdlog/: pattern_formatter-inl.h
Vendors/include/spdlog/details/: os-inl.h
Vendors/stb_image/: CMakeLists.txt
include/modules/: ImGuiModuleReload.h
